--- a/index.html
+++ b/index.html
@@ -7,6 +7,76 @@
     <title>TOP - Landing Page</title>
 </head>
 <body>
+   <header class="container">
+        <nav>
+            <span class="logo">Header Logo</span>
+            <ul class="menu">
+                <li>
+                    <a href="#">header link one</a>
+                </li>
+                <li>
+                    <a href="#">header link two</a>
+                </li>
+                <li>
+                    <a href="#">header link three</a>
+                </li>
+            </ul>
+        </nav>
+        <section class="header_content">
+            <div class="text_content">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast</p>
+                <button class="action_btn">Sign up</button>
+            </div>
+            <div class="header_img">
+                <span>this is a placeholder for an image</span>
+            </div>
+        </section>
+    </header>
+
+    <main class="container">
+        <section id="information">
+            <h2>Some random information</h2>
+            <ul class="illustration_list">
+                <l1>
+                    <div class="list_img"></div>
+                    <span class="list_subtext">this is some subtext under the illustration or image</span>
+                </l1>
+                <l1>
+                    <div class="list_img"></div>
+                    <span class="list_subtext">this is some subtext under the illustration or image</span>
+                </l1>
+                <l1>
+                    <div class="list_img"></div>
+                    <span class="list_subtext">this is some subtext under the illustration or image</span>
+                </l1>
+                <l1>
+                    <div class="list_img"></div>
+                    <span class="list_subtext">this is some subtext under the illustration or image</span>
+                </l1>
+            </ul>
+        </section>
+        <section id="quote">
+            <figure>
+                <blockquote>
+                    This is an inspiring quote, or testimonial  from a customer. Maybe it's just 
+                    filling up space, or maybe people will actually read it. Who knows? All I know 
+                    is that it looks nice.
+                </blockquote>
+                <figcaption>- Thor, God of Thunder</figcaption>
+            </figure>
+        </section>
+        <section id="action">
+            <div class="action_content">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for a product by clicking that button right over there!</p>
+            </div>
+            <button class="action_btn">Sign up</button>
+        </section>
+    </main>
+    <footer class="container">
+        <span>Copyright &copy; The Odin Project 2021</span>
+    </footer>
     
 </body>
 </html>
