Completed Style Sheet

--- a/index.html
+++ b/index.html
@@ -36,27 +36,28 @@
 
     <main class="container">
         <section id="information">
-            <h2>Some random information</h2>
+            <h2>Some random information.</h2>
             <ul class="illustration_list">
-                <l1>
+                <li>
                     <div class="list_img"></div>
                     <span class="list_subtext">this is some subtext under the illustration or image</span>
-                </l1>
-                <l1>
+                </li>
+                <li>
                     <div class="list_img"></div>
                     <span class="list_subtext">this is some subtext under the illustration or image</span>
-                </l1>
-                <l1>
+                </li>
+                <li>
                     <div class="list_img"></div>
                     <span class="list_subtext">this is some subtext under the illustration or image</span>
-                </l1>
-                <l1>
+                </li>
+                <li>
                     <div class="list_img"></div>
                     <span class="list_subtext">this is some subtext under the illustration or image</span>
-                </l1>
+                </li>
             </ul>
         </section>
-        <section id="quote">
+        <section id="quote" class="container">
+
             <figure>
                 <blockquote>
                     This is an inspiring quote, or testimonial  from a customer. Maybe it's just 
@@ -71,12 +72,12 @@
                 <h3>Call to action! It's time!</h3>
                 <p>Sign up for a product by clicking that button right over there!</p>
             </div>
-            <button class="action_btn">Sign up</button>
+            <button class="action_btn accent">Sign up</button>
         </section>
     </main>
     <footer class="container">
         <span>Copyright &copy; The Odin Project 2021</span>
     </footer>
-    
+
 </body>
 </html>
